SERVER-43889 Distinguish between retryable write and transaction when failing a command

(cherry picked from commit eb284b042c71edf0eac445d3ceb79f7fdeabc5d1)